--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>B-works</title>
+    <title>B-Works S.r.l. GmbH</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/static/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/static/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/static/favicon/manifest.json">
+    <link rel="mask-icon" href="/static/favicon/safari-pinned-tab.svg" color="#4b7fe2">
+    <link rel="shortcut icon" href="/static/favicon/favicon.ico">
+    <meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div id="app"></div>
