--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718"></script>
   </body>
 </html>
