BW-79 Add webfonts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
     <link rel="shortcut icon" href="/static/favicon/favicon.ico">
     <meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <style type="text/css">
+      @import url("https://fast.fonts.net/lt/1.css?apiType=css&c=a97b7534-569b-47ae-8717-b84d291f7e36&fontids=721263,721281,721287");
+      @font-face{
+        font-family:"AvenirNextLTW01";
+        src:url("/static/fonts/721263/e9167238-3b3f-4813-a04a-a384394eed42.eot?#iefix");
+        src:url("/static/fonts/721263/e9167238-3b3f-4813-a04a-a384394eed42.eot?#iefix") format("eot"),url("/static/fonts/721263/2cd55546-ec00-4af9-aeca-4a3cd186da53.woff2") format("woff2"),url("/static/fonts/721263/1e9892c0-6927-4412-9874-1b82801ba47a.woff") format("woff"),url("/static/fonts/721263/46cf1067-688d-4aab-b0f7-bd942af6efd8.ttf") format("truetype");
+        font-weight: 400;
+      }
+      @font-face{
+        font-family:"AvenirNextLTW01";
+        src:url("/static/fonts/721281/dccb10af-07a2-404c-bfc7-7750e2716bc1.eot?#iefix");
+        src:url("/static/fonts/721281/dccb10af-07a2-404c-bfc7-7750e2716bc1.eot?#iefix") format("eot"),url("/static/fonts/721281/14c73713-e4df-4dba-933b-057feeac8dd1.woff2") format("woff2"),url("/static/fonts/721281/b8e906a1-f5e8-4bf1-8e80-82c646ca4d5f.woff") format("woff"),url("/static/fonts/721281/890bd988-5306-43ff-bd4b-922bc5ebdeb4.ttf") format("truetype");
+        font-weight: 700;
+      }
+      @font-face{
+        font-family:"AvenirNextLTW01";
+        src:url("/static/fonts/721287/3418f6be-70a5-4c26-af1d-c09a8642ca20.eot?#iefix");
+        src:url("/static/fonts/721287/3418f6be-70a5-4c26-af1d-c09a8642ca20.eot?#iefix") format("eot"),url("/static/fonts/721287/5c57b2e2-f641-421e-a95f-65fcb47e409a.woff2") format("woff2"),url("/static/fonts/721287/181c847e-cdbc-43d5-ae14-03a81c8953b4.woff") format("woff"),url("/static/fonts/721287/045d1654-97f2-4ff0-9d24-21ba9dfee219.ttf") format("truetype");
+        font-weight: 900;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
