--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
-    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718"></script>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718"></script>
   </body>
 </html>
