--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
     <!-- built files will be auto injected -->
 
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718"></script>
+    <script type="text/javascript">
+      if (!/PhantomJS/.test(window.navigator.userAgent)) {
+        var s = document.createElement("script")
+        s.type = "text/javascript"
+        s.src = "//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718"
+        s.async = true
+        document.head.appendChild(s)
+      }
+    </script>
   </body>
 </html>
