--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         var s = document.createElement("script")
         s.type = "text/javascript"
         s.src = "//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718"
-        s.async = true
-        document.head.appendChild(s)
+        document.body.appendChild(s)
       }
     </script>
   </body>
