--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
 
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript">
       if (!/PhantomJS/.test(window.navigator.userAgent)) {
-        var s = document.createElement("script")
-        s.type = "text/javascript"
-        s.src = "//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718"
-        document.body.appendChild(s)
+        // www.addthis.com/dashboard
+        (function(d){var s=d.createElement("script");s.type="text/javascript";s.src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718";d.body.appendChild(s);})(document);
+
+        // adwords.google.com
+        (function(a,e,c,f,g,b,d){var h={ak:"855205735",cl:"UY7OCLKWpXAQ587llwM"};a[c]=a[c]||function(){(a[c].q=a[c].q||[]).push(arguments)};a[f]||(a[f]=h.ak);b=e.createElement(g);b.async=1;b.src="//www.gstatic.com/wcm/loader.js";d=e.getElementsByTagName(g)[0];d.parentNode.insertBefore(b,d);a._googWcmGet=function(b,d,e){a[c](2,b,h,d,null,new Date,e)}})(window,document,"_googWcmImpl","_googWcmAk","script");
       }
     </script>
   </body>
