--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ title }}</title>
+    <meta name="description" content="{{ description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/public/favicon/favicon-32x32.png" sizes="32x32">
