Restore Google Site Verification

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="/public/favicon/favicon.ico">
     <meta name="msapplication-config" content="/public/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <meta name="google-site-verification" content="TRxvEYx0riZHHGLgqaRquDc48uRSPKpgnh5X3RPwnxA" />
     <style type="text/css">
       @import url("https://fast.fonts.net/lt/1.css?apiType=css&c=a97b7534-569b-47ae-8717-b84d291f7e36&fontids=721263,721281,721287");
       @font-face{
