--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,7 +14,9 @@
     <meta name="msapplication-config" content="/public/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <meta name="google-site-verification" content="TRxvEYx0riZHHGLgqaRquDc48uRSPKpgnh5X3RPwnxA" />
-    <style type="text/css">
+    <style>
+      #skip a {  position:absolute;  left:-10000px;  top:auto;  width:1px;  height:1px;  overflow:hidden;  }
+      #skip a:focus {  position:static;  width:auto;  height:auto;  }
       @import url("https://fast.fonts.net/lt/1.css?apiType=css&c=a97b7534-569b-47ae-8717-b84d291f7e36&fontids=721263,721281,721287");
       @font-face{
         font-family:"AvenirNextLTW01";
@@ -37,16 +39,15 @@
     </style>
   </head>
   <body>
+    <div id="skip"><a href="#app">skip to content</a></div>
     <!--vue-ssr-outlet-->
 
     <script type="text/javascript">
-      if (typeof window !== 'undefined' && typeof document !== 'undefined') {
-        // www.addthis.com/dashboard
-        (function(d){var s=d.createElement("script");s.type="text/javascript";s.src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718";d.body.appendChild(s);})(document);
+      // www.addthis.com/dashboard
+      (function(d){var s=d.createElement("script");s.type="text/javascript";s.src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718";d.body.appendChild(s);})(document);
 
-        // adwords.google.com
-        (function(a,e,c,f,g,b,d){var h={ak:"855205735",cl:"UY7OCLKWpXAQ587llwM"};a[c]=a[c]||function(){(a[c].q=a[c].q||[]).push(arguments)};a[f]||(a[f]=h.ak);b=e.createElement(g);b.async=1;b.src="//www.gstatic.com/wcm/loader.js";d=e.getElementsByTagName(g)[0];d.parentNode.insertBefore(b,d);a._googWcmGet=function(b,d,e){a[c](2,b,h,d,null,new Date,e)}})(window,document,"_googWcmImpl","_googWcmAk","script");
-      }
+      // adwords.google.com
+      (function(a,e,c,f,g,b,d){var h={ak:"855205735",cl:"UY7OCLKWpXAQ587llwM"};a[c]=a[c]||function(){(a[c].q=a[c].q||[]).push(arguments)};a[f]||(a[f]=h.ak);b=e.createElement(g);b.async=1;b.src="//www.gstatic.com/wcm/loader.js";d=e.getElementsByTagName(g)[0];d.parentNode.insertBefore(b,d);a._googWcmGet=function(b,d,e){a[c](2,b,h,d,null,new Date,e)}})(window,document,"_googWcmImpl","_googWcmAk","script");
     </script>
   </body>
 </html>
