Simplify SFC tags

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -42,7 +42,7 @@
     <div id="skip"><a href="#app">skip to content</a></div>
     <!--vue-ssr-outlet-->
 
-    <script type="text/javascript">
+    <script>
       // www.addthis.com/dashboard
       (function(d){var s=d.createElement("script");s.type="text/javascript";s.src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58e4b19ecf819718";d.body.appendChild(s);})(document);
 
