--- a/src/index.template.html
+++ b/src/index.template.html
@@ -88,7 +88,7 @@
             "link": "{{ cc_link }}",
             "href": "{{ cc_href }}"
           },
-          "revokeBtn": null,
+          "revokeBtn": "",
           onInitialise: function (status) {
             if (this.hasConsented()) {
               gdprConsented();
