--- a/src/index.template.html
+++ b/src/index.template.html
@@ -70,6 +70,12 @@
       };
 
       window.addEventListener("load", function(){
+        // Deny using cookies if set to the end of url: ?cookieconsent-deny
+        var url_parameter = window.location.search.substring(1);
+        if(url_parameter == "cookieconsent-deny") {
+          document.cookie = "cookieconsent_status=deny";
+        }
+
         window.cookieconsent.initialise({
           "palette": {
             "popup": {
