Add the script for integrating LiveCall

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -121,5 +121,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <div id="skip"><a href="#app">skip to content</a></div>
     <!--vue-ssr-outlet-->
+    <!-- LiveCall -->
+    <script async src=“https://assets.livecall.io/accounts/8236/widget.js“></script>
   </body>
 </html>
