Work in progress: generation of meta tags

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,8 +10,14 @@
     <meta charset="utf-8">
     <title>{{ title }}</title>
     <meta name="description" content="{{ description }}">
-    <meta property="og:image" content="{{ image }}">
+    
+    <!-- 
+      <meta property="og:image" content="{{ image }}">
     <meta name="twitter:image" content="{{ image }}">
+    
+    -->
+    <!-- Metadata for images-->
+    {{{ image }}}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
